Checkbox Control: Fix squished checkboxes when label text wraps (#5192)
On the front-end, checkboxes with labels would look squished when the labels wrapped
on a second line. That was due to the flex container taking too much space for the label
as the checkbox minimum dimensions was set in `px` rather than `em`, making it work
differently depending on the relative font size.

--- a/packages/checkout/components/checkbox-control/style.scss
+++ b/packages/checkout/components/checkbox-control/style.scss
@@ -14,8 +14,8 @@
 		height: em(24px);
 		width: em(24px);
 		margin: 0;
-		min-height: 24px;
-		min-width: 24px;
+		min-height: em(24px);
+		min-width: em(24px);
 		overflow: hidden;
 		position: static;
 		vertical-align: middle;
